Closed Bug 1050127 Opened 12 years ago Closed 12 years ago

Mismatched #define and #undef in js/src/jit/Recover.cpp

Categories

(Core :: JavaScript Engine: JIT, defect)

x86_64
Linux
defect
Not set
normal

Tracking

()

RESOLVED FIXED
mozilla34

People

(Reporter: aetf, Assigned: aetf, Mentored)

Details

Attachments

(1 file)

User Agent: Mozilla/5.0 (X11; Linux x86_64; rv:34.0) Gecko/20100101 Firefox/34.0 (Beta/Release) Build ID: 20140723030202 Steps to reproduce: open js/src/jit/Recover.cpp in editor. Actual results: in RInstruction::readRecoverData, a typo in the undef of MATCH_OPCODES_ ::: js/src/jit/Recover.cpp @@ 40,9 @@ > # define MATCH_OPCODES_(op) \ > case Recover_##op: \ > static_assert(sizeof(R##op) <= sizeof(RInstructionStorage), \ > "Storage space is too small to decode R" #op " instructions."); \ > new (raw->addr()) R##op(reader); \ > break; > > RECOVER_OPCODE_LIST(MATCH_OPCODES_) > # undef DEFINE_OPCODES_ Expected results: It should be this ::: js/src/jit/Recover.cpp @@ 40,9 @@ > # define MATCH_OPCODES_(op) \ > case Recover_##op: \ > static_assert(sizeof(R##op) <= sizeof(RInstructionStorage), \ > "Storage space is too small to decode R" #op " instructions."); \ > new (raw->addr()) R##op(reader); \ > break; > > RECOVER_OPCODE_LIST(MATCH_OPCODES_) > # undef MATCH_OPCODES_
A patch that fixes this
Attachment #8469107 - Flags: review?(luke)
Attachment #8469107 - Flags: review?(luke) → review+
Assignee: nobody → 7437103
Mentor: nicolas.b.pierron
Status: UNCONFIRMED → ASSIGNED
Ever confirmed: true
Hi Nicolas. I thought maybe you have too many review request so I picked up the first one who is suggested by the page ;P So how to land this change into the code base? Will this patch be sent to the try-server?
(In reply to Aetf from comment #2) > Hi Nicolas. I thought maybe you have too many review request so I picked up > the first one who is suggested by the page ;P Thanks for your consideration :) Still, this is my typo … > So how to land this change into the code base? Will this patch be sent to > the try-server? This patch is trivial and is unlikely to cause regressions. So I will just land it with the other patches from Bug 1038592.
Status: ASSIGNED → RESOLVED
Closed: 12 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla34
Flags: qe-verify-
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: